--- a/myapp/templates/dashboard.html
+++ b/myapp/templates/dashboard.html
@@ -399,7 +399,7 @@
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-      <script type="text/javascript" src="{% static 'script.js' %}"></script>
+      <script type="application/javascript" src="{% static 'script.js' %}"></script>
 
 
 </body>
